testdata/ttcn3-conformance-tests/ATS/core_language/08_modules/0802_module_definitions_part/080201_module_parameters/NegSem_080201_ModuleParameters_005.ttcn
/*****************************************************************
 ** @author   STF 521
 ** @version  0.0.1
 ** @purpose  1:8.2.1, Ensure that a reference to plain module parameter with a default value delivers the default value unless it is overwritten.
 ** @verdict  pass reject
 *****************************************************************/
// A module parameter shall only be of type address if the address type is explicitly defined within the associated module

module NegSem_080201_ModuleParameters_005 {

modulepar address MY_ADDRESS_MODULE_PARAMETER := 2;    // error: address type not defined

type component GeneralComp {
}

testcase TC_NegSem_080201_ModuleParameters_005() runs on GeneralComp {
	if (MY_ADDRESS_MODULE_PARAMETER == 2) {
		setverdict(pass);
	} else {
		setverdict(fail);
	}
}

control{
    execute(TC_NegSem_080201_ModuleParameters_005());
}

}
